--- a/css/main.css
+++ b/css/main.css
@@ -6,31 +6,29 @@ top: 2589px;
 background: #FFF5F6;
 }
 
+/* .about_div{ 
+    display: flex;
+text-align: center;
+flex-direction: column;
+align-items: center;
+}
+*/
 .label{
-    width: 198px;
-height: 21px;
-left: 58px;
-top: 2649px;
-
 font-family: 'Titan One';
 font-style: normal;
 font-weight: 400;
 font-size: 18px;
 line-height: 21px;
-/* identical to box height */
-
-text-align: center;
 text-transform: uppercase;
-
 color: #FFA5BA;
+padding-top: 60px;
+display: flex;
+text-align: center;
+flex-direction: column;
+align-items: center;
 }
 
 .title{
-    width: 200px;
-height: 76px;
-left: 56px;
-top: 2685px;
-
 font-family: 'Titan One';
 font-style: normal;
 font-weight: 400;
@@ -39,8 +37,9 @@ line-height: 39px;
 text-align: center;
 letter-spacing: 0.04em;
 text-transform: uppercase;
-
 color: #D41443;
+width: 200px;
+margin: 15px 64px 32px 56px;
 }
 
 .desc1 {
@@ -50,12 +49,13 @@ font-weight: 500;
 font-size: 12px;
 line-height: 162%;
 /* or 19px */
-
+width: 220px;
 
 color: #000000;
 }
 
 #more {display: none;}
+
 
 .desc2 {
 font-family: 'DM Sans';
@@ -63,12 +63,13 @@ font-style: normal;
 font-weight: 500;
 font-size: 12px;
 line-height: 162%;
-
 color: #907E82;
+width: 220px;
 }
 
 .descbtn {
 background: #FFFFFF;
+border: none;
 border-radius: 22px;
 cursor: pointer;
 width: 176px;
@@ -84,11 +85,16 @@ display: flex;
 align-items: center;
 text-align: center;
 color: #D41443;
+justify-content: center;
 }
 
 .descbtn > p {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 18px;
     display: flex;
-    align-items: center;
-text-align: center;
-margin: auto;
+    align-items: baseline;
+    text-align: center;
+    justify-content: center;
 }   
